--- a/portfolio _contact/CSS/style.css
+++ b/portfolio _contact/CSS/style.css
@@ -4,6 +4,24 @@ main > section {
   max-width: 100%;
   margin: 0 auto;
 }
+
+.container {
+  position: relative; /*乗算背景基準*/
+}
+.background-overlay {
+  background: url("../img/p0040_l.png");
+  opacity: 0.4;
+  mix-blend-mode: multiply;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+}
+
 /*ヘッダーエリア*/
 .header_wrap {
   max-width: 1366px;
@@ -20,6 +38,7 @@ main > section {
   padding-top: 30px;
   padding-left: 72px;
   white-space: nowrap;
+  z-index: 5;
 }
 .header_pc_ul {
   display: block;
@@ -34,6 +53,8 @@ main > section {
   padding-left: 30px;
   white-space: nowrap;
   padding-right: 15px;
+  position: relative;
+  z-index: 5;
 }
 
 .header_pc_nav a {
@@ -45,6 +66,32 @@ main > section {
 .header_pc_nav {
   max-width: 1000px;
   margin: 0 auto;
+}
+
+.dropdown_lists {
+  width: 100%;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  z-index: 1000;
+}
+
+.dropdown_lists li {
+  visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
+  height: 0; /* デフォルトの高さを0にする */
+  overflow: hidden; /* 内容があふれないようにする */
+  transition: height 0.3s ease, visibility 0.3s ease; /* なめらかに表示 */
+}
+
+.hnavi_list:hover .dropdown_lists li {
+  visibility: visible; /* ホバー時に表示 */
+  height: 2rem; /* 高さを設定 */
+  overflow: visible; /* 内容があふれる場合は表示する */
+}
+
+.header_pc_ul li:hover > ul > li {
+  height: 2rem;
+  overflow: visible;
 }
 .header_pc_nav a::after {
   content: "";
@@ -78,6 +125,7 @@ main {
   padding-top: 186px;
   padding-bottom: 70px;
   text-align: center;
+  z-index: 5;
 }
 
 .contact_sbtitle {
@@ -111,6 +159,7 @@ main {
   border: 1px solid #efeeec;
   border-radius: 3px;
   align-items: center;
+  z-index: 5;
 }
 
 textarea.c-form__input {
@@ -120,6 +169,7 @@ textarea.c-form__input {
   text-align: center;
   padding-top: 150px;
   padding-bottom: 30px;
+  z-index: 5;
 }
 .c-form__submit button {
   font-size: 16px;
@@ -131,19 +181,29 @@ textarea.c-form__input {
   transition: 0.8s;
   cursor: pointer;
   border: none;
+  z-index: 5;
 }
 .c-form__submit button:hover {
   color: #a0a08e;
   background-color: #a0a08e80;
+  z-index: 5;
 }
 
 /*フッターエリア*/
+
+.background_wave {
+  max-width: 1366px;
+  width: 100%;
+  margin: 0 auto;
+  display: block;
+  position: absolute;
+  height: 440px;
+}
 .footer_era {
   padding-top: 250px;
   background-image: url("../img/wave_main.png");
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 0 auto;
 }
 .footer {
   max-width: 1366px;
@@ -294,7 +354,7 @@ textarea.c-form__input {
     width: 100%;
     height: 100vh;
     background: #8b8c8c;
-    z-index: 4;
+    z-index: 6;
   }
   .header_sp_nav.active {
     display: flex;
@@ -318,6 +378,37 @@ textarea.c-form__input {
     position: relative;
   }
 
+  .dropdown_lists {
+    width: 100%;
+    position: absolute;
+    top: 29px;
+    left: 110%;
+    white-space: nowrap;
+    z-index: 1000;
+  }
+
+  .dropdown_lists li {
+    visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
+    font-size: 11px;
+  }
+  .web_design_child {
+    top: -3px;
+    right: -5px;
+  }
+
+  .glass_art_child {
+    top: -26px;
+  }
+
+  .hnavi_list:hover .dropdown_lists li {
+    display: block; /* ホバー時に表示 */
+    visibility: visible; /* 見える */
+  }
+
+  .header_pc_ul li:hover > ul > li {
+    height: 2rem;
+    overflow: visible;
+  }
   .header_sp_nav a::after {
     content: "";
     position: absolute;
