--- a/portfolio_webdesign/css/style.css
+++ b/portfolio_webdesign/css/style.css
@@ -4,6 +4,23 @@ main > section {
   max-width: 100%;
   margin: 0 auto;
 }
+/*背景テクスチャー乗算*/
+.container {
+  position: relative; /*乗算背景基準*/
+}
+.background-overlay {
+  background: url("../imgs/p0040_l.png");
+  opacity: 0.4;
+  mix-blend-mode: multiply;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+}
 /*ヘッダーエリア*/
 .header_wrap {
   max-width: 1366px;
@@ -20,6 +37,7 @@ main > section {
   padding-top: 30px;
   padding-left: 72px;
   white-space: nowrap;
+  z-index: 5;
 }
 .header_pc_ul {
   display: block;
@@ -36,6 +54,7 @@ main > section {
   white-space: nowrap;
   padding-right: 15px;
   position: relative;
+  z-index: 5;
 }
 
 .header_pc_nav a {
@@ -60,16 +79,7 @@ main > section {
 .dropdown_lists li {
   visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
 }
-/*.works_child_1 {
-  position: relative;
-  top: 3px;
-  left: -2%;
-}
-.works_child_2 {
-  position: relative;
-  top: 10px;
-  left: 1%;
-}*/
+
 .hnavi_list:hover .dropdown_lists li {
   display: block; /* ホバー時に表示 */
   visibility: visible; /* 見える */
@@ -79,26 +89,6 @@ main > section {
   height: 2rem;
   overflow: visible;
 }
-
-/* .web_design,
-.glass_art:not(:first-child)::before {
-  content: "";
-  width: 100%;
-  height: 1px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.web_design,
-.glass_art a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #5b573e;
-  text-decoration: none;
-  position: relative;
-} */
 
 .header_pc_nav a::after {
   content: "";
@@ -458,6 +448,37 @@ h4 {
     font-weight: lighter;
     font-size: 14px;
     position: relative;
+  }
+  .dropdown_lists {
+    width: 100%;
+    position: absolute;
+    top: 29px;
+    left: 110%;
+    white-space: nowrap;
+    z-index: 1000;
+  }
+
+  .dropdown_lists li {
+    visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
+    font-size: 11px;
+  }
+  .web_design_child {
+    top: -3px;
+    right: -5px;
+  }
+
+  .glass_art_child {
+    top: -26px;
+  }
+
+  .hnavi_list:hover .dropdown_lists li {
+    display: block; /* ホバー時に表示 */
+    visibility: visible; /* 見える */
+  }
+
+  .header_pc_ul li:hover > ul > li {
+    height: 2rem;
+    overflow: visible;
   }
 
   .header_sp_nav a::after {
