--- a/css/style.css
+++ b/css/style.css
@@ -179,12 +179,12 @@ main > section {
   top: 30px;
   right: 0;
   z-index: 1000;
+  margin-left: 10px;
 }
 
 .dropdown_lists li {
   visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
 }
-
 .web_design_child,
 .glass_art_child li {
   background-color: none;
@@ -237,9 +237,9 @@ h2 {
   flex-wrap: nowrap;
   padding-bottom: 70px;
   position: relative; /* スライダーアイテムの配置を相対的にするため */
-  margin-top: 190px;
 }
 .home h2 {
+  padding-top: 190px;
   white-space: nowrap;
 }
 .home_slider_item {
@@ -273,6 +273,23 @@ h2 {
     opacity: 1;
   }
 }
+
+/*--- 紙芝居 --- */
+.stack-content.stuck {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.home_text {
+  transition: all 0.3s;
+  z-index: 6;
+}
+
+.home_parts {
+  transition: all 0.3s;
+}
+/*---------------*/
 
 /*おもいエリア*/
 
@@ -324,12 +341,13 @@ h2 {
 
 .contents {
   display: inline-block;
-  max-width: 1366px;
-  padding-top: 80px;
-  padding-bottom: 680px;
+  width: 100%; /* 横幅を100%に */
+  margin-top: 80px; /* paddingをmarginに */
+  margin-bottom: 680px; /* paddingをmarginに */
   position: relative;
   top: 600px;
-  left: 15%;
+  text-align: center; /* 画像を左右中央に */
+  background: #fff; /* 白背景をつけて、手のイラストが隠れるように */
 }
 
 /*私についてのエリア*/
@@ -498,6 +516,22 @@ h2 {
 .container_pc_2 {
   display: block;
 }
+
+.link-wrapper {
+  display: block; /* リンクとして全体を包む */
+  position: relative; /* これにより、リンク内の要素が相対的に配置される */
+}
+
+.background-overlay {
+  /* 背景乗算の設定 */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* 背景にマウスイベントを通さない */
+}
+
 .works {
   width: 100%;
   background-color: #efe7b4;
@@ -621,17 +655,20 @@ h2 {
   white-space: nowrap;
   padding-top: 100px;
   margin-left: 10%;
+  z-index: 5;
 }
 .contact_drawing {
   display: inline-block;
   padding-top: 8%;
   padding-right: 0%;
   width: 76%;
+  z-index: 5;
 }
 .contact_parts {
   padding-top: 100px;
   width: 80%;
   white-space: nowrap;
+  z-index: 5;
 }
 .contact ul {
   display: flex;
@@ -640,12 +677,14 @@ h2 {
   font-size: 24px;
   padding-top: 73px;
   margin-left: 10%;
+  z-index: 5;
 }
 .mail_icon {
   width: 50px;
   padding-top: 62px;
   padding-bottom: 50px;
   padding-left: 3%;
+  z-index: 5;
 }
 
 /*フッターエリア*/
@@ -668,20 +707,23 @@ h2 {
   padding: 20px;
   white-space: nowrap;
   position: relative;
+  z-index: 5;
 }
 .footer_a li {
   margin: 0 10px;
+  padding-top: 10px;
+  padding-right: 12px;
 }
-.footer a {
+.footer_a a {
   position: relative;
 }
 
-.footer_nav a::after {
+.footer_a a::after {
   content: "";
   position: absolute;
   left: 0;
   bottom: 0;
-  background-color: rgba(91, 87, 62, 70);
+  background-color: rgba(91, 87, 62, 0.7);
   width: 100%;
   height: 1px;
   transform: scale(0, 1);
@@ -690,15 +732,36 @@ h2 {
   /*opacity: 0;
   transition: opacity 0.6s ease-out; 下線がふわっと出るタイプ*/
 }
-.footer_nav a:hover::after {
+.footer_a a:hover::after {
   transform: scale(1, 1);
   transform: right top;
   /*opacity: 1;  下線がふわっと出るタイプ*/
 }
+.footer_dropdown_lists {
+  max-width: 1366px;
+  width: 100%;
+  position: absolute;
+  top: 25px;
+  left: -10%;
+  z-index: 1000;
+  margin-top: 3px;
+}
+.footer_dropdown_lists li {
+  visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
+}
+.footer_hnavi_list {
+  position: relative; /* 親要素を相対位置指定 */
+}
+
+.footer_works_child_2 {
+  padding-right: 10px;
+}
+
 .sns_rnk {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 40px;
 }
 .instagram_icon,
 .x_icon {
@@ -728,6 +791,7 @@ h2 {
 
   .header_sp_nav {
     display: block;
+    z-index: 3000;
   }
 
   .concept {
@@ -789,16 +853,6 @@ h2 {
     width: 100%;
     height: 600px;
   }
-  /*ハンバーガーメニューエリア*/
-  .sp_btn {
-    display: block;
-    height: 23px;
-    cursor: pointer;
-    z-index: 10;
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
 
   .header_logo {
     font-family: "Hubballi";
@@ -807,6 +861,174 @@ h2 {
     padding-top: 30px;
     padding-left: 22px;
     white-space: nowrap;
+  }
+
+  /*ハンバーガーメニューエリア*/
+  .sp_btn {
+    display: block;
+    height: 23px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3000; /* 高い z-index を設定 */
+  }
+
+  .home_sp_circle {
+    z-index: 5;
+    width: 130%;
+    overflow-x: hidden;
+    position: relative;
+    height: 100vh;
+  }
+
+  .home_sp_circle img {
+    transform: rotate(0deg);
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 110%;
+    max-width: 1100px;
+    min-width: 1100px;
+    max-height: 860px;
+  }
+
+  .sp_btn span {
+    display: block;
+    width: 33px;
+    height: 1px;
+    border-radius: 2px;
+    background: #5b573e;
+    position: relative;
+    top: 45px;
+    right: 70%;
+    transition: 0.3s;
+  }
+
+  .sp_btn span::before,
+  .sp_btn span::after {
+    content: "";
+    display: block;
+    width: 33px;
+    height: 1px;
+    border-radius: 2px;
+    background: #5b573e;
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  .sp_btn span::before {
+    bottom: 12px;
+  }
+
+  .sp_btn span::after {
+    top: 12px;
+  }
+
+  /* ばつ印 */
+  .sp_btn.open span {
+    background: transparent;
+  }
+
+  .sp_btn.open span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+  }
+
+  .sp_btn.open span::after {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  .header_sp_nav {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #8b8c8c;
+    z-index: 3000; /* 高い z-index を設定 */
+  }
+
+  .header_sp_nav.active {
+    display: flex;
+  }
+
+  .header_sp_nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-right: 20%;
+    height: 100%;
+  }
+
+  .header_sp_nav li {
+    margin: 20px;
+    padding-bottom: 3px;
+    color: #5b573e;
+    font-family: "Zen Kaku Gothic Antique", "Hubballi", "游ゴシック",
+      "YuMGothic", "Hiragino Mincho ProN W3", "ヒラギノ角ゴ", "HiraKaku";
+    font-weight: lighter;
+    font-size: 14px;
+    position: relative;
+    z-index: 3000; /* 高い z-index を設定 */
+  }
+
+  .dropdown_lists {
+    width: 100%;
+    position: absolute;
+    top: 29px;
+    left: 110%;
+    white-space: nowrap;
+    z-index: 1000;
+  }
+
+  .dropdown_lists li {
+    visibility: hidden; /* デフォルトでは非表示 */
+    font-size: 11px;
+  }
+
+  .web_design_child {
+    top: -3px;
+    right: -5px;
+  }
+
+  .glass_art_child {
+    top: -26px;
+  }
+
+  .hnavi_list:hover .dropdown_lists li {
+    display: block; /* ホバー時に表示 */
+    visibility: visible; /* 見える */
+  }
+
+  .header_pc_ul li:hover > ul > li {
+    height: 2rem;
+    overflow: visible;
+  }
+
+  .header_sp_nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: #5b573e;
+    width: 100%;
+    height: 1px;
+    transform: scale(0, 1);
+    transform-origin: left bottom;
+    transition: transform 0.5s ease-out;
+  }
+
+  .header_sp_nav a:hover::after {
+    transform: scale(1, 1);
+  }
+
+  picture {
+    max-width: 100%;
+    width: 100%;
   }
   .home h2 {
     max-width: 767px;
@@ -821,6 +1043,16 @@ h2 {
     position: relative;
     padding-left: 22px;
     padding-bottom: 0px;
+  }
+
+  @media (max-width: 767px) {
+    .home_slider_item,
+    .home_text {
+      display: none;
+    }
+  }
+  .hidden {
+    display: none;
   }
   .home_slider_item {
     position: absolute;
@@ -843,7 +1075,7 @@ h2 {
   }
 
   .home_sp_circle {
-    z-index: 5;
+    z-index: 50;
     width: 130%;
     overflow: hidden;
     position: relative;
@@ -890,7 +1122,8 @@ h2 {
 
   /*ばつ印*/
   .sp_btn.open span {
-    background: transparent;
+    background: transparent !important;
+    z-index: 10;
   }
   .sp_btn.open span::before {
     bottom: 0;
@@ -908,7 +1141,7 @@ h2 {
     width: 100%;
     height: 100vh;
     background: #8b8c8c;
-    z-index: 6;
+    z-index: 12;
   }
   .header_sp_nav.active {
     display: flex;
@@ -931,7 +1164,7 @@ h2 {
     font-size: 14px;
     position: relative;
   }
-  .dropdown_lists {
+  .footer_dropdown_lists {
     width: 100%;
     position: absolute;
     top: 29px;
@@ -1257,6 +1490,24 @@ h2 {
   .container_pc_2 {
     display: none;
   }
+
+  .link-wrapper {
+    display: block; /* リンクとして全体を包む */
+    width: 100%;
+    position: relative; /* これにより、リンク内の要素が相対的に配置される */
+    pointer-events: auto; /* リンクとしての機能を有効にする */
+  }
+
+  .background-overlay {
+    /* 背景乗算の設定 */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* 背景にマウスイベントを通さない */
+  }
+
   .works {
     padding-top: 50px;
     padding-bottom: 60px;
@@ -1281,9 +1532,7 @@ h2 {
     gap: 25px;
     margin-bottom: 100px;
   }
-  .container_sp_2 {
-    flex-direction: row-reverse;
-  }
+
   .web_design,
   .glass_art {
     display: flex;
@@ -1313,12 +1562,14 @@ h2 {
     position: absolute; /* 白背景内で右下に配置 */
     right: 9%;
     bottom: 10px;
+    pointer-events: auto; /* リンクとしての機能を有効にする */
   }
   .more_2 {
     font-size: 13px;
     position: absolute; /* 白背景内で右下に配置 */
     right: 9%;
     bottom: 10px;
+    pointer-events: auto; /* リンクとしての機能を有効にする */
   }
   .web,
   .glass {
@@ -1411,8 +1662,35 @@ h2 {
     padding-top: 62px;
   }
   .footer_a li {
-    margin: 25px 25px 25px;
+    margin: 30px 25px 25px;
   }
+  .footer_hnavi_list {
+    margin: 0;
+  }
+  .footer_dropdown_lists {
+    display: flex;
+    width: 100%;
+    position: absolute;
+    top: -5px;
+    left: -2%;
+    white-space: nowrap;
+    z-index: 1000;
+  }
+
+  .footer_dropdown_lists li {
+    visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
+    font-size: 11px;
+    margin-top: 30px;
+  }
+  .footer_web_design_child {
+    padding-left: 250px;
+    margin-right: 0;
+  }
+
+  .footer_glass_art_child li {
+    margin-left: 0;
+  }
+
   .sns_rnk {
     flex-direction: column;
     justify-content: center;
