--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,18 @@
 @charset "utf-8";
 
 /*----- スクロールパーツ -----*/
+html,
+body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  max-width: 100%;
+  overflow-x: hidden;
+  margin: 0 auto;
+}
+
 main {
   position: relative;
   overflow-x: hidden;
