--- a/portfolio_contact/CSS/style.css
+++ b/portfolio_contact/CSS/style.css
@@ -38,7 +38,7 @@ main > section {
   padding-top: 30px;
   padding-left: 72px;
   white-space: nowrap;
-  z-index: 5;
+  z-index: 3;
 }
 .header_pc_ul {
   display: block;
@@ -47,6 +47,10 @@ main > section {
   padding-top: 30px;
 }
 .header_sp_ul {
+  display: none;
+}
+
+.header_sp_nav {
   display: none;
 }
 .header_pc_nav li {
@@ -67,7 +71,6 @@ main > section {
   max-width: 1000px;
   margin: 0 auto;
 }
-
 .dropdown_lists {
   width: 100%;
   position: absolute;
@@ -78,21 +81,18 @@ main > section {
 
 .dropdown_lists li {
   visibility: hidden; /*デフォルトでは非表示の状態にしておく、見えない状態にしておく*/
-  height: 0; /* デフォルトの高さを0にする */
-  overflow: hidden; /* 内容があふれないようにする */
-  transition: height 0.3s ease, visibility 0.3s ease; /* なめらかに表示 */
 }
 
 .hnavi_list:hover .dropdown_lists li {
-  visibility: visible; /* ホバー時に表示 */
-  height: 2rem; /* 高さを設定 */
-  overflow: visible; /* 内容があふれる場合は表示する */
+  display: block; /* ホバー時に表示 */
+  visibility: visible; /* 見える */
 }
 
 .header_pc_ul li:hover > ul > li {
   height: 2rem;
   overflow: visible;
 }
+
 .header_pc_nav a::after {
   content: "";
   position: absolute;
@@ -125,7 +125,7 @@ main {
   padding-top: 186px;
   padding-bottom: 70px;
   text-align: center;
-  z-index: 5;
+  z-index: 2;
 }
 
 .contact_sbtitle {
@@ -159,7 +159,7 @@ main {
   border: 1px solid #efeeec;
   border-radius: 3px;
   align-items: center;
-  z-index: 5;
+  z-index: 4;
 }
 
 textarea.c-form__input {
@@ -169,7 +169,8 @@ textarea.c-form__input {
   text-align: center;
   padding-top: 150px;
   padding-bottom: 30px;
-  z-index: 5;
+  position: relative;
+  z-index: 4;
 }
 .c-form__submit button {
   font-size: 16px;
@@ -181,12 +182,13 @@ textarea.c-form__input {
   transition: 0.8s;
   cursor: pointer;
   border: none;
-  z-index: 5;
+  position: relative;
+  z-index: 3;
 }
 .c-form__submit button:hover {
   color: #a0a08e;
   background-color: #a0a08e80;
-  z-index: 5;
+  z-index: 2;
 }
 
 /*フッターエリア*/
@@ -274,9 +276,19 @@ textarea.c-form__input {
   .header_pc_nav {
     display: none;
   }
+
   .header_sp_nav {
     display: block;
   }
+  .header_logo {
+    font-family: "Hubballi";
+    font-size: 19px;
+    font-weight: normal;
+    padding-top: 30px;
+    padding-left: 22px;
+    white-space: nowrap;
+  }
+
   /*ハンバーガーメニューエリア*/
   .sp_btn {
     display: block;
@@ -289,7 +301,7 @@ textarea.c-form__input {
   }
 
   .home_sp_circle {
-    z-index: 5;
+    z-index: 7;
     width: 130%;
     overflow-x: hidden;
     position: relative;
@@ -354,7 +366,7 @@ textarea.c-form__input {
     width: 100%;
     height: 100vh;
     background: #8b8c8c;
-    z-index: 6;
+    z-index: 5;
   }
   .header_sp_nav.active {
     display: flex;
@@ -377,7 +389,6 @@ textarea.c-form__input {
     font-size: 14px;
     position: relative;
   }
-
   .dropdown_lists {
     width: 100%;
     position: absolute;
@@ -409,6 +420,7 @@ textarea.c-form__input {
     height: 2rem;
     overflow: visible;
   }
+
   .header_sp_nav a::after {
     content: "";
     position: absolute;
@@ -429,16 +441,34 @@ textarea.c-form__input {
     max-width: 100%;
     width: 100%;
   }
-}
 
+  main {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .container {
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .container_item {
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 @media screen and (max-width: 767px) {
   /*全体*/
   picture {
     max-width: 767px;
     width: 100%;
   }
-  main > .header {
+  main > section,
+  .header {
     max-width: 300px;
+    width: 100px;
   }
   h2 {
     font-size: 20px;
@@ -446,15 +476,13 @@ textarea.c-form__input {
   }
 
   /*----------------------*/
-  /*ヘッダーエリア*/
+  /*ヘッダーとホームエリア*/
   .header_pc_ul {
     display: none;
   }
   .header_wrap {
-    max-width: 767px;
+    overflow-x: hidden;
     width: 100%;
-    padding-left: 22px;
-    margin: 0 auto;
   }
   .header_logo {
     font-family: "Hubballi";
@@ -463,6 +491,12 @@ textarea.c-form__input {
     padding-top: 30px;
     padding-left: 22px;
     white-space: nowrap;
+  }
+
+  main {
+    max-width: 767px;
+    margin: 0 auto;
+    width: 100%;
   }
   .contact_title {
     font-size: 20px;
