--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ footer {
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 6250px;
+  top: 7400px;
   right: -85px;
   margin-left: auto;
   z-index: 5;
@@ -362,7 +362,7 @@ h2 {
   margin-top: 80px; /* paddingをmarginに*/
   margin-bottom: 300px; /* paddingをmarginに*/
   position: relative;
-  top: 500px;
+  top: 510px;
   text-align: center; /* 画像を左右中央に*/
   background: #fff; /* 白背景をつけて、手のイラストが隠れるように */
 }
@@ -878,6 +878,7 @@ h2 {
   justify-content: center;
   align-items: center;
   padding-top: 40px;
+  z-index: 5;
 }
 .instagram_icon,
 .x_icon {
@@ -885,10 +886,12 @@ h2 {
   margin: 41px 10px 42px;
   display: flex;
   align-items: center;
+  z-index: 5;
 }
 .sns_rnk img {
   width: 100%;
   height: auto;
+  z-index: 5;
 }
 .copyright {
   font-size: 11px;
@@ -942,13 +945,13 @@ h2 {
     margin-top: 80px; /* paddingをmarginに*/
     margin-bottom: 300px; /* paddingをmarginに*/
     position: relative;
-    top: 100px;
+    top: 330px;
     text-align: center; /* 画像を左右中央に*/
     background: #fff; /* 白背景をつけて、手のイラストが隠れるように */
   }
   .fuwafuwa_1 {
-    width: 480px; /* 画像の幅を設定 */
-    height: 480px; /* 画像の高さを設定 */
+    width: 500px; /* 画像の幅を設定 */
+    height: 500px; /* 画像の高さを設定 */
     background: url(../images/img/contents1.png) no-repeat center center /
       contain;
     display: block;
@@ -1009,7 +1012,7 @@ h2 {
     background-image: url("../images/img/wave_sp_gr@2x.png");
     background-repeat: no-repeat;
     background-size: cover;
-    top: 0px;
+    top: -300px;
   }
 
   .about_contents {
@@ -1252,14 +1255,14 @@ h2 {
   .bottom.scroll_circle {
     width: 120px;
     height: 120px;
-    top: 6400px;
+    top: 6720px;
     right: -50px;
     margin-left: auto;
     z-index: 5;
   }
   .bottom .scrolldown span {
     right: auto;
-    left: 36px;
+    left: 35px;
     bottom: 20px;
     transform: rotate(0deg);
   }
@@ -1567,7 +1570,7 @@ h2 {
     margin-top: 280px; /* paddingをmarginに*/
     margin-bottom: 50px; /* paddingをmarginに*/
     position: relative;
-    top: 0px;
+    top: -19px;
     text-align: center; /* 画像を左右中央に*/
     background: #fff; /* 白背景をつけて、手のイラストが隠れるように */
   }
@@ -1581,7 +1584,8 @@ h2 {
     margin: 0px; /* 上に余白を設定し、中央に配置 */
     animation: fuwafuwa1 3s ease-in-out infinite alternate;
     transition: 1.5s ease-in-out;
-
+    margin-bottom: 50px;
+    padding-bottom: 200px;
     z-index: 2; /* z-indexの値を修正 */
   }
   .fuwafuwa_2 {
@@ -1593,7 +1597,8 @@ h2 {
     margin: 0; /* 上に余白を設定し、中央に配置 */
     animation: fuwafuwa2 3s ease-in-out infinite alternate;
     transition: 1.5s ease-in-out;
-
+    padding-bottom: 100px;
+    margin-top: 100px;
     z-index: 2; /* z-indexの値を修正 */
   }
   .fuwafuwa_3 {
@@ -1606,20 +1611,20 @@ h2 {
     margin: 0; /* 上に余白を設定し、中央に配置 */
     animation: fuwafuwa3 3s ease-in-out infinite alternate;
     transition: 1.5s ease-in-out;
-
+    padding-bottom: 100px;
     z-index: 2; /* z-indexの値を修正 */
   }
   .fuwafuwa_4 {
     width: 70%;
     right: 50%;
-    top: -60px;
+    top: 0px;
     background: url(../images/img/contents4.png) no-repeat center center /
       contain;
     display: block;
     margin: 0; /* 上に余白を設定し、中央に配置 */
     animation: fuwafuwa4 3s ease-in-out infinite alternate;
     transition: 1.5s ease-in-out;
-
+    padding-bottom: 0px;
     z-index: 2; /* z-indexの値を修正 */
   }
   /*----------------------*/
@@ -1844,15 +1849,16 @@ h2 {
     justify-content: center;
     align-items: center;
     max-width: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
   }
   .contact_contents {
+    display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 767px;
     width: 100%;
     height: 600px;
-    overflow-y: hidden;
+    overflow: hidden;
   }
   .circle {
     min-height: 500px;
@@ -1995,7 +2001,7 @@ h2 {
   }
   /* フッター */
   .footer_era {
-    margin-top: 0px;
+    margin-top: -300px;
   }
 
   .scrolldown span {
