--- a/portfolio_contact/CSS/style.css
+++ b/portfolio_contact/CSS/style.css
@@ -219,9 +219,11 @@ textarea.c-form__input {
   margin: 0 auto;
   padding: 20px;
   white-space: nowrap;
+  z-index: 5;
 }
 .footer_a li {
   margin: 0 10px;
+  z-index: 5;
 }
 .footer_nav a {
   position: relative;
@@ -250,6 +252,8 @@ textarea.c-form__input {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 40px;
+  z-index: 5;
 }
 .instagram_icon,
 .x_icon {
@@ -257,10 +261,12 @@ textarea.c-form__input {
   margin: 41px 10px 42px;
   display: flex;
   align-items: center;
+  z-index: 5;
 }
 .sns_rnk img {
   width: 100%;
   height: auto;
+  z-index: 5;
 }
 .copyright {
   font-size: 11px;
