--- a/portfolio_glassart/CSS/style.css
+++ b/portfolio_glassart/CSS/style.css
@@ -171,7 +171,9 @@ h4 {
   text-align: center;
   font-size: 20px;
   margin: 0 auto;
+  z-index: 5;
 }
+
 .instagram_rnk {
   height: 65px;
   width: auto;
@@ -179,6 +181,13 @@ h4 {
   padding-bottom: 40px;
   margin: auto;
   display: block;
+  z-index: 5;
+}
+.instagram_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 6;
 }
 
 /*フッターエリア*/
@@ -208,9 +217,11 @@ h4 {
   margin: 0 auto;
   padding: 20px;
   white-space: nowrap;
+  z-index: 5;
 }
 .footer_a li {
   margin: 0 10px;
+  z-index: 5;
 }
 .footer_nav a {
   position: relative;
@@ -239,6 +250,7 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 .instagram_icon,
 .x_icon {
@@ -246,10 +258,12 @@ h4 {
   margin: 41px 10px 42px;
   display: flex;
   align-items: center;
+  z-index: 5;
 }
 .sns_rnk img {
   width: 100%;
   height: auto;
+  z-index: 5;
 }
 .copyright {
   font-size: 11px;
